<resources>
    <string name="app_name">SnapSheet</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="continue_text">CONTINUE</string>
    <string name="signup_email_hint">Your email address will be used to identify you.</string>
    <string name="signup_password_hint">Your password should be at least 8 characters.</string>
    <string name="signup_birthday_hint">The users must be 18+.</string>
    <string name="login_title">Log In</string>
    <string name="usernameOrEmail">USERNAME OR EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="invalid_email">The email is not valid.</string>
    <string name="password_invalid">The password is not valid.</string>
    <string name="signup_username_hint">Your username is how friends add you on Snapsheet.</string>
    <string name="email_title">What\'s your email?</string>
    <string name="password_title">What\'s your password?</string>
    <string name="birthday_title">When\'s your birthday?</string>
    <string name="username_title">Pick a username</string>
    <string name="username_null">Username cannot be null.</string>
    <string name="username_exists">This username existed.</string>
    <string name="chat_actionbar_title">Chat</string>
    <string name="fragment_chat_search_hint">Search</string>
    <string name="chat_hint">Chat With...</string>
    <string name="add_friends_actionbar_title">Add Friends</string>
    <string name="my_friends_actionbar_title">My Friends</string>
    <string name="send_to_friend">Send to friend</string>
    <string name="fail_to_get_device_id">Failed to get a device id. Make sure the device has google play framework and the network can be accessed.</string>
    <string name="fragment_search_nearby">Scan</string>
    <string name="memory">Memory</string>
    <string name="memory_import">Import</string>

    <string name="share_info_with_others">Hi, I am [%s]. Please add me in Snap Sheet</string>
    <string name="memory_title">Memory</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="mobile_title">What\'s your mobile number?</string>
    <string name="signup_mobile_hint">Your mobile number should be valid.</string>
    <string name="setting_title">Settings</string>
</resources>
