<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:text="@string/login_title"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/fragment_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_login_title"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/usernameOrEmail" />

    <EditText
        android:id="@+id/fragment_login_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/fragment_login_username"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />

    <TextView
        android:id="@+id/fragment_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_username_edit_text"
        android:layout_marginLeft="50dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/fragment_login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/fragment_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_button_style"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
</RelativeLayout>